--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ body {
     padding: 0;
 }
 
+a {
+    text-align: center;
+    text-shadow: 0 0 10px orange, 0 0 20px orange;
+    text-decoration: none;
+}
+
 h1, p {
     text-align: center;
     text-shadow: 0 0 10px orange, 0 0 20px orange;
