--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ html, body {
 }
 
 
-a {
+.links {
     text-align: center;
     text-shadow: 0 0 10px orange, 0 0 20px orange;
     text-decoration: none;
