--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     padding: 0;
 }
 
-h1, p {
+h1, p, h4 {
     text-align: center;
     text-shadow: 0 0 10px orange, 0 0 20px orange;
 }
@@ -19,6 +19,7 @@ h1, p {
 
 section {
     margin: 50px 0;
+    text-align: center; /* Ensure content is centered */
 }
 
 /* Sidebar Styles */
@@ -63,7 +64,8 @@ body a {
     color: #e67e00; /* Slightly darker orange */
     text-decoration: none;
     text-shadow: 0 0 10px orange, 0 0 20px orange;
-    text-align: center;
+    display: inline-block;  /* Ensure links are treated as inline-block */
+    margin: 10px 0;  /* Add spacing between the links */
 }
 
 body a:hover {
