--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,14 @@ html, body {
 .error-page .home-link:hover {
     background-color: #ffcc00;
 }
+
+/* Reduce space between image and heading only when 'logo-margin' class is present */
+.logo-margin img {
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 5px; /* Adjust spacing */
+}
+
+.logo-margin h1 {
+    margin-top: 0;
+}
