--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ html, body {
 #message {
     position: fixed;
     bottom: 10px;
-    width: 100px;
+    width: 38%;
     height: 30px;
     left: 50%;
     transform: translateX(-50%);
