--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ html, body {
 #message {
     position: fixed;
     bottom: 10px;
-    width: 38%;
+    width: 36%;
     height: 30px;
     left: 50%;
     transform: translateX(-50%);
@@ -107,5 +107,7 @@ html, body {
     position: fixed;
     bottom: 10px;
     left: 70%;
+    width: 30px;
+    height: 30px;
     transform: translateX(-50%);
 }
