--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,9 @@ html, body {
     height: 30px;
     transform: translateX(-50%);
 }
+
+#password-input {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
