--- a/styles.css
+++ b/styles.css
@@ -116,4 +116,36 @@ html, body {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    color: orange;
+}
+
+#username-input {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    color: orange;
+}
+
+#username-input {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    color: rgb(0, 0, 0);
+    background-color: orangered;
+    border: orangered solid 1px;
+    border-radius: 20px;
+    width: 50px;
+    height: 30px;
+}
+
+
+#sign-in {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 50%;
+    transform: translateY(-50%);
+    width: 600px;
+    height: 600px;
+    color: #251300;
 }
