--- a/Information/information.css
+++ b/Information/information.css
@@ -1,1 +1,119 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: black;
+    color: orange;
+    margin: 0;
+    padding: 0;
+}
+h1, p, h4 {
+    text-align: center;
+    text-shadow: 0 0 10px orange, 0 0 20px orange;
+}
+#content {
+    margin-left: 250px;  
+    padding: 20px;
+    text-align: center;  
+}
+section {
+    margin: 50px 0;
+}
+#sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;  
+    width: 250px;
+    height: 100%;
+    background-color: #222;
+    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
+    padding-top: 20px;
+    overflow: auto;
+}
+#sidebar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+#sidebar ul li {
+    padding: 20px;
+    text-align: left;
+}
+#sidebar ul li a {
+    color: orange;
+    text-decoration: none;
+    font-size: 18px;
+    text-shadow: 0 0 10px orange, 0 0 20px orange;
+    display: block;
+    padding: 5px 0;
+}
+#sidebar ul li a:hover {
+    color: #ffcc00;
+    background-color: #333;
+}
+body a {
+    color: #e67e00; 
+    text-decoration: none;
+    text-shadow: 0 0 10px orange, 0 0 20px orange;
+    display: inline-block;  
+    text-align: center;  
+    margin: 10px auto;  
+    padding: 5px 0;  
+}
+body a:hover {
+    color: #cc6a00; 
+}
+html, body {
+    height: 100%;
+}
+.error-page {
+    text-align: center;
+    margin-top: 100px;
+}
+.error-page h1 {
+    font-size: 48px;
+    color: orange;
+}
+.error-page p {
+    font-size: 24px;
+    color: white;
+}
+.home-link {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: orange;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+}
+.error-page .home-link:hover {
+    background-color: #ffcc00;
+}
+.logo-fixed {
+    position: fixed;
+    top: 10px;  
+    right: 10px; 
+    width: 100px; 
+    z-index: 1000;
+}
+#message {
+    position: fixed;
+    bottom: 10px;
+    width: 36%;
+    height: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#send-message {
+    position: fixed;
+    bottom: 10px;
+    left: 70%;
+    width: 30px;
+    height: 30px;
+    transform: translateX(-50%);
+}
 
+#password-input {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
