--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
 }
-h1, p, h4 {
+h1, h2, h3, p, h4 {
     text-align: center;
     text-shadow: 0 0 10px orange, 0 0 20px orange;
 }
